[package]
name = "aptsc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.135"
reqwest = { version = "0.11", features = [
    "blocking",
    "json",
], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
