[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[dependencies]
# regex = "0.1.41"
serde_json = "1.0.64"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = [
    "blocking",
], default-features = false }
tokio = { version = "1", features = ["full"] }
kube = { version = "0.98.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.24.0", features = ["latest"] }
futures = "0.3"
